--- a/css/style.css
+++ b/css/style.css
@@ -82,12 +82,14 @@ body {
 
 .info {
   margin-right: 4rem;
+  padding: 2rem;
   width: 60%;
-  height: 15vw;
+  height: 50%;
   text-align: center;
   background-color: crimson;
   border-radius: 10px;
   color: whitesmoke;
+  box-shadow: 10px 10px 5px black;
 }
 
 .info h1 {
@@ -95,14 +97,32 @@ body {
   font-size: 2rem;
 }
 
+
+.info-btn {
+  width: 30%;
+  transform: translateX(110%);
+  border-radius: 5px;
+}
+
+.info-btn a{
+  font-weight: bold;
+  color:whitesmoke;
+  text-decoration: none;
+  font-size: 1rem;
+}
+
 .section-img {
   width: 50%;
+  box-shadow: 10px 10px 5px black;
 }
 
 .section-img img {
   width: 100%;
   height: 100%;
+  border-radius: 5px;
 }
+
+
 
 
 
