--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,9 @@ body {
 
 /* NAV */
 .header {
+  position: fixed;
   display: flex;
   flex-direction: row;
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -47,7 +47,7 @@ body {
 /* Home Section */
 
 .section {
-  background: url(/imagenes/IMG_20211018_075325.jpg);
+  background: url(/IMG_20211011_174638.jpg);
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -97,18 +97,10 @@ body {
   font-size: 2rem;
 }
 
-
-.info-btn {
-  width: 30%;
-  transform: translateX(110%);
-  border-radius: 5px;
-}
-
-.info-btn a{
-  font-weight: bold;
-  color:whitesmoke;
-  text-decoration: none;
+.info a {
   font-size: 1rem;
+  color: whitesmoke;
+  text-decoration: none;
 }
 
 .section-img {
@@ -122,9 +114,33 @@ body {
   border-radius: 5px;
 }
 
+/*Most Popular Cake Section*/
+
+.section-cakes {
+  background-color: crimson;
+  margin: 0;
+}
+
+.grid-img {
+  display: grid;
+  gap: 1rem;
+  grid-auto-rows: 22.5rem;
+  grid-template-columns: repeat(autofill, minmax(min(100%, 25rem), 1fr));
+}
 
 
+.divs-label {
+  display: flex;
+  flex-direction: row;
+  background-color: darkblue;
+  margin: 2rem;
+ 
+}
 
+.divs-label img{
+  width: 100%;
+  height: 50%;
+}
 
 
 
