--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
- 
 }
 
 
@@ -10,37 +9,36 @@ body {
   display: flex;
   flex-direction: row;
   top: 0;
-  left: 0;
   width: 100%;
-  height: 38%;
+  height: 15vw;
   padding: 1rem;
   background-color: crimson;
 }
 
-.header div {
-  width: 45%;
+.nav-img {
+  display: inherit;
+  width: 100%;
+  transform: translateX(10%);
 }
-.nav-img img{
-  padding-left: 10vw;
-  padding-bottom: 10vh;
-  width: 40%;
-  
-}
+
+
+
 
 .nav ul{
   display: flex;
   flex-direction: row;
   position: absolute;
   align-items: center;
-  margin-top: 8rem;
-  right: 10rem;
+  margin-top: 10%;
+  right: 20%;
   list-style: none;
   color: white;
 }
 
 .nav ul li {
-  font-size: 2vw;
-  padding: 1rem;
+  font-size: 1.5rem;
+  margin: 2%;
+  padding: 1vw;
 }
 
 
@@ -51,8 +49,8 @@ body {
   background-position: center;
   background-size: cover;
   text-align: center;
-  height: 110vh;
-  margin-top: 40vh;
+  height: 50vw;
+  margin-top: 15vw;
 }
 
 .section h1{
@@ -122,14 +120,27 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   background-color: crimson;
+  
 }
+
+.titles {
+  height: 10%;
+  width: 100%;
+  margin: 1.5rem;
+  text-align: center;
+  font-size: 2rem;
+  color: whitesmoke;
+}
+
+
 
 .divs-label {
   display: inherit;
   flex-wrap: wrap;
-  margin: 5%;
-  width: 20vw;
+  margin: 3rem;
+  width: 20%;
   border-radius: 10px;
+  box-shadow: 10px 10px 5px gray;
 }
 
 .divs-label img{
@@ -150,6 +161,7 @@ body {
 
 .labels h3 {
   font-size: 1rem;
+  color: crimson;
 }
 
 
