--- a/css/style.css
+++ b/css/style.css
@@ -103,13 +103,14 @@ body {
 
 .section-img {
   width: 50%;
-  box-shadow: 10px 10px 5px black;
+  box-shadow: 10px 12px 5px black;
 }
 
 .section-img img {
   width: 100%;
   height: 100%;
-  border-radius: 5px;
+  box-shadow: 10px 8px 5px black;
+  
 }
 
 /*Most Popular Cake Section*/
@@ -162,6 +163,15 @@ body {
 .labels h3 {
   font-size: 1rem;
   color: crimson;
+}
+
+/* Contact Section */
+
+.section-img-contact img{
+  width: 30%;
+  margin: 10%;
+  height: 35vw;
+  box-shadow: 10px 10px 5px black;
 }
 
 
