--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,22 @@ body {
   flex-direction: row;
   top: 0;
   width: 100%;
-  height: 15vw;
-  padding: 1rem;
+  height: 20%;
+  padding: 0;
   background-color: crimson;
 }
 
 .nav-img {
   display: inherit;
-  width: 100%;
-  transform: translateX(10%);
+  width: 30%;
+  transform: translateX(30%);
 }
 
-
+.nav-img img {
+  height: 70%;
+  width: 25%;
+  padding: 1rem;
+}
 
 
 .nav ul{
@@ -29,16 +33,16 @@ body {
   flex-direction: row;
   position: absolute;
   align-items: center;
-  margin-top: 10%;
+  margin-top: 3%;
   right: 20%;
   list-style: none;
   color: white;
 }
 
 .nav ul li {
-  font-size: 1.5rem;
-  margin: 2%;
-  padding: 1vw;
+  font-size: 1.2rem;
+  margin: 5%;
+  padding: 0.5rem;
 }
 
 
@@ -50,7 +54,7 @@ body {
   background-size: cover;
   text-align: center;
   height: 50vw;
-  margin-top: 15vw;
+  margin-top: 5%;
 }
 
 .section h1{
@@ -67,6 +71,7 @@ body {
   background: none;
   border: none;
   color: whitesmoke;
+  font-weight: bold;
 }
 
 
@@ -170,17 +175,20 @@ body {
 .contact-section {
   display: flex;
   flex-direction: row;
-  padding: 5%;
+  padding: 1rem;
   background-color: lightgray;
 }
 
 .section-img-contact {
-  width: 60%;
+  width: 50%;
+  margin: 5%;
   text-align: center;
 }
 
 .section-img-contact img{
+  margin: 10%;
   width: 60%;
+  height: 75%;
   box-shadow: 10px 10px 5px black;
 }
 
@@ -208,9 +216,45 @@ body {
 
 
 .links a img{
-  width: 15%;
-  padding: 1%;
+  width: 10%;
+  padding: 0.5rem;
 }
+
+.form {
+  display: inherit;
+  flex-direction: column;
+  margin: 1rem;
+}
+
+.form h2 {
+  font-size: 1.5rem;
+}
+
+.form button {
+  margin: 1%; 
+  padding: 1%;
+  border-style: double;
+  border-radius: 5px;
+  background-color: crimson;
+  color: whitesmoke;
+  width: 20%; 
+}
+
+.inputs {
+  padding: 0.5rem;
+}
+
+.inputs input, textarea {
+  color: red;
+  font-size: 1rem;
+  font-weight: bolder;
+  border-radius: 5px;
+  text-align: center;
+  border-color: crimson;
+  border-style:double;
+}
+
+
 
 
 
