--- a/css/style.css
+++ b/css/style.css
@@ -5,26 +5,26 @@ body {
 
 /* NAV */
 .header {
-  position: fixed;
   display: flex;
   flex-direction: row;
+  position: sticky;
   top: 0;
   width: 100%;
-  height: 20%;
+  height: 25%;
   padding: 0;
   background-color: crimson;
 }
 
 .nav-img {
-  display: inherit;
-  width: 30%;
-  transform: translateX(30%);
-}
+  width: 50%;
+  height: 90%;
+}  
 
 .nav-img img {
-  height: 70%;
-  width: 25%;
-  padding: 1rem;
+  height: 100%;
+  width: 30%;
+  margin: 1%;
+  padding-left: 5%;
 }
 
 
@@ -49,25 +49,26 @@ body {
 /* Home Section */
 
 .section {
+  display: flex;
+  flex-direction: column;
   background: url(/IMG_20211011_174638.jpg);
   background-position: center;
   background-size: cover;
   text-align: center;
   height: 50vw;
-  margin-top: 5%;
 }
 
 .section h1{
-  padding: 5rem;
-  padding-top: 15vw;
-  font-size: 2rem;
+  margin: 5%;
+  padding: 1rem;
+  font-size: 1.5rem;
   font-weight: bold;
   color: whitesmoke;
 }
 
 .home-btn button{
-
-  font-size: 1.8rem;
+  margin: 5%;
+  font-size: 1rem;
   background: none;
   border: none;
   color: whitesmoke;
