--- a/css/style.css
+++ b/css/style.css
@@ -81,13 +81,15 @@ body {
 .section-about {
   display: flex;
   flex-direction: row;
-  margin: 10%;
+  margin: 5%;
 }
 
+
+
 .info {
-  margin-right: 4rem;
-  width: 60%;
-  height: 30vw;
+  margin: 3.5rem;
+  width: 50%;
+  height: 10%;
   text-align: center;
   background-color: crimson;
   border-radius: 10px;
@@ -97,7 +99,12 @@ body {
 
 .info h1 {
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.5rem;
+}
+
+.info p {
+  font-size: 1rem;
+  margin: 1rem;
 }
 
 .info a {
@@ -107,8 +114,8 @@ body {
 }
 
 .section-img {
-  width: 50%;
-  height: 35vw;
+  width: 40%;
+  height: 40%;
   box-shadow: 10px 12px 5px black;
 }
 
@@ -257,10 +264,31 @@ body {
 
 
 
+/* Media Queries */
 
 
+@media(max-width: 810px) {
 
+  .section-about {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+  }
+  
+  .section-about div {
+    margin: 1rem;
+  
+  }
 
+  .section-cakes {
+    flex-direction: column;
+    align-items: center;
+  }
 
+  .divs-label {
+    width: 40%;
+    height: 35%;
+    transform: translateX(-8%);
+  }
 
-
+}
