--- a/css/style.css
+++ b/css/style.css
@@ -7,23 +7,22 @@ body {
 .header {
   display: flex;
   flex-direction: row;
-  position: sticky;
   top: 0;
   width: 100%;
-  height: 25%;
+  height: 20%;
   padding: 0;
   background-color: crimson;
 }
 
 .nav-img {
-  width: 50%;
-  height: 90%;
+  width: 30%;
+  height: 20%;
+  margin-left: 3%;
 }  
 
 .nav-img img {
-  height: 100%;
+  height: 50%;
   width: 30%;
-  margin: 1%;
   padding-left: 5%;
 }
 
@@ -33,15 +32,15 @@ body {
   flex-direction: row;
   position: absolute;
   align-items: center;
-  margin-top: 3%;
-  right: 20%;
   list-style: none;
   color: white;
+  right: 5rem;
+  top: 1.5rem;
 }
 
 .nav ul li {
-  font-size: 1.2rem;
-  margin: 5%;
+  font-size: 1rem;
+  margin: 1%;
   padding: 0.5rem;
 }
 
@@ -287,8 +286,31 @@ body {
 
   .divs-label {
     width: 40%;
-    height: 35%;
+    height: 30%;
     transform: translateX(-8%);
+  }
+
+
+  .contact-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+
+
+  .form h2 {
+    text-align: center;
+  }
+
+  .inputs input, textarea{
+    width: 60%;
+    font-size: 0.5rem; 
+  }
+
+
+  .form button {
+    margin: 5%;
+    width: 50%;
   }
 
 }
