--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+  margin:0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -8,56 +14,52 @@ body {
 
 
 /* NAV */
-.header {
+
+
+nav {
   display: flex;
-  flex-direction: row;
-  top: 0;
-  width: 100%;
-  height: 20%;
-  padding: 0;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
   background-color: crimson;
 }
 
-.nav-img {
-  width: 30%;
-  height: 20%;
-  margin-top: 1vh;
-  margin-left: 2vw;
-}  
-
-.nav-img img {
-  height: 50%;
-  width: 30%;
-  padding-left: 5%;
+.logo {
+  color: whitesmoke;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 20px;
 }
 
-.panel {
-  display: inherit;
-  cursor: pointer;
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
 }
 
+.nav-links li {
+  list-style: none;
+}
 
-.nav-bar {
+.nav-links a {
+  color: whitesmoke;
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.burger {
   display: none;
 }
 
-.nav {
-  
-  margin-top: 3rem;
-  margin-left: 35vw;
-  margin-bottom: 1vh;
-}
 
-.nav a{
-  padding: 1rem;
-  text-decoration: none;
-  color: whitesmoke;
+.burger div {
+  width: 25px;
+  height: 3px;
+  background-color: whitesmoke;
+  margin: 5px;
 }
-
-.nav a:hover {
-  color: gold;
-}
-
 
 
 
@@ -289,28 +291,40 @@ body {
 
 /* Media Queries */
 
+@media screen and (max-width: 1024px) {
+  .nav-links {
+    width: 50%;
+  }
 
-@media(max-width: 946px) {
+}
 
-  .nav-img {
-    width: 30%;
-    height: 20%;
-    margin-top: 1vh;
-    margin-left: 2vw;
+
+@media screen and (max-width: 768px) {
+
+  body {
+    overflow-x: hidden;
   }
   
-  
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 8vh;
+    right: 0px;
+    height: 92vh;
+    width: 50%;
+  }
 
-  .nav-bar {
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .burger {
     display: block;
-    margin-top: 2vh;
-    margin-left: 50vw;
-    margin-bottom: 2vh;
   }
 
-  .nav {
-    display: none;
-  }
+
 
   .section-about {
     flex-direction: column;
@@ -363,4 +377,10 @@ body {
     width: 50%;
   }
 
+}
+
+
+.nav-active {
+  transform: translateX(0%);
+  transition: transform 0.5s ease-in;
 }
