--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ nav {
 
 .nav-links a:hover {
   color: gold;
+  transition: 0.8s ease;
 }
 
 
@@ -81,7 +82,7 @@ nav {
 .section {
   display: flex;
   flex-direction: column;
-  background: url(/IMG_20211018_075325.jpg);
+  background: url(/imagenes/IMG_20211018_075325.jpg);
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -241,13 +242,13 @@ nav {
 
 .section-img-contact {
   width: 70%;
-  margin: 5rem;
+  margin-top: 10%;
   text-align: center;
 }
 
 .section-img-contact img{
   width: 50%;
-  height: 100%;
+  height: 80%;
   box-shadow: 5px 5px 5px black;
 }
 
@@ -264,10 +265,11 @@ nav {
 
 .social-media h1 {
   font-size: 1rem;
+  font-weight: bolder;
 }
 
 .links {
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .links a {
@@ -276,28 +278,33 @@ nav {
 
 
 .links a img{
-  width: 10%;
+  height: 100%;
+  width: 20%;
   padding: 0.5rem;
 }
 
 .form {
   display: inherit;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin: 1rem;
+  --form-ok-color: #4caf50;
+  --form-error-color: #f44336;
+}
+
+.form > * {
+  padding: 0.5rem;
+  display: block;
+  width: 100%;
 }
 
 .form h2 {
   font-size: 1rem;
 }
 
-.form button {
-  margin: 1%; 
-  padding: 1%;
-  border-style: double;
-  border-radius: 5px;
-  background-color: crimson;
-  color: whitesmoke;
-  width: 20%; 
+.form textarea {
+  resize: none;
 }
 
 .inputs {
@@ -314,6 +321,25 @@ nav {
   border-style:double;
 }
 
+.submit-btn {
+  margin: 1%;
+}
+
+.submit-btn input {
+  color: whitesmoke;
+  background-color: crimson;
+  padding: 0.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.contact-form-loader {
+  padding: 1rem;
+}
+
+.contact-form-loader img {
+  width: 10%;
+}
 
 
 /* Media Queries */
